# MSCV-Capstone

./: .gitignore  .loop.sh.swo  .loop.sh.swp  README  README.md  loop.sh  photo.py  project.sh
DATA/raw/: IMG_5114.MOV
app/capstone/capstone/: AppDelegate.h  AppDelegate.m  Info.plist  ViewController.h  ViewController.mm  cointerest.h  cointerest.mm  config.h  cosal_config.h  cosaliency.h  cosaliency.mm  main.m
app/capstone/capstone.xcodeproj/: project.pbxproj
app/capstone/capstone.xcodeproj/project.xcworkspace/xcuserdata/judy.xcuserdatad/: UserInterfaceState.xcuserstate
app/capstone/capstone.xcodeproj/xcuserdata/judy.xcuserdatad/xcschemes/: capstone.xcscheme  xcschememanagement.plist
app/capstone/capstone/Base.lproj/: Main.storyboard
app/capstone/capstone/src/vl/: host.c
app/capstone/capstoneUITests/: capstoneUITests.m
app/test/test/: AppDelegate.h  AppDelegate.m  ViewController.h  ViewController.m  main.m
app/test/test.xcodeproj/: project.pbxproj
app/test/test.xcodeproj/project.xcworkspace/xcuserdata/judy.xcuserdatad/: UserInterfaceState.xcuserstate
app/test/test.xcodeproj/xcuserdata/judy.xcuserdatad/xcschemes/: xcschememanagement.plist
app/test/testUITests/: testUITests.m
c/: .config.h.swp  Makefile  config.h  project.sh
c/cointerest/: CMakeLists.txt  Makefile  base.h  cointerest.cpp
c/cosaliency/: CMakeLists.txt  Makefile  SingleSaliency.h  config.h  cosal  cosaliency.cpp  time.sh
