CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(Cointerest)
ADD_COMPILE_OPTIONS(-std=c++11)
FIND_PACKAGE(OpenCV REQUIRED)
find_package(Boost COMPONENTS system filesystem REQUIRED)

SET(VLFEAT_INCLUDE_DIRS "../src")

SET(CMAKE_MODULE_PATH "../src/eigen/cmake;${CMAKE_MODULE_PATH}")
FIND_PACKAGE(Eigen3 REQUIRED )

INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS} ${VLFEAT_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR} ${EIGEN3_INCLUDE_DIR})


ADD_DEFINITIONS("-DVL_DISABLE_AVX")
FILE(GLOB SOURCES ../src/vlfeat/vl/*.c) # PATH TO vlfeat so we can do ugly glob
MESSAGE(STATUS "    sources path: ${SOURCES}")
ADD_LIBRARY(vlfeats ${SOURCES} )

ADD_EXECUTABLE(coint cointerest.cpp)
TARGET_LINK_LIBRARIES(coint ${OpenCV_LIBS} vlfeats ${OpenCV_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} ${Boost_FILESYSTEM_LIBRARY}
      ${Boost_SYSTEM_LIBRARY} -lpthread -lm)
